Finale Version 1 des Reports fertig

--- a/Report/abstract.tex
+++ b/Report/abstract.tex
@@ -1,8 +1,6 @@
 % !TEX root =  master.tex
-\chapter*{}
-\vfill
-\begin{center}
-\textbf{\fontsize{30}{632}\selectfont Abstract}\\
+\chapter*{Abstract}
+\addcontentsline{toc}{chapter}{Abstract}
+Dieses Projekt zielt auf die Implementierung und Visualisierung des genetischen Algorithmus NEAT (Neuroevolution of augmenting topologies) ab, angewendet auf das {Lunar Lander}-Spiel aus der Gymnasium-Bibliothek. Der Fokus liegt auf der Entwicklung eines Lehrvideos, das den Algorithmus und seine Anwendung im Spielkontext veranschaulicht. Unter Verwendung der Python-Bibliothek Manim wurde ein detailliertes Visualisierungskonzept entworfen und umgesetzt, um die Funktionsweise von NEAT eingängig zu erklären.
 
-\end{center}
-\vfill
+Im Zuge des Projekts wurde der NEAT-Algorithmus von Grund auf implementiert und in das \enquote{Lunar Lander}-Spiel integriert. Durch das vertonte Lehrvideo, das sowohl visuell ansprechend als auch informativ gestaltet wurde, konnte eine klare und verständliche Darstellung des Algorithmus erreicht werden. Das Endergebnis ist ein umfassendes Lehrmittel, das sowohl die technische Implementierung als auch die theoretischen Grundlagen von NEAT effektiv vermittelt.
