--- a/Report/bibliography.bib
+++ b/Report/bibliography.bib
@@ -142,3 +142,10 @@
   url = {https://gymnasium.farama.org/environments/box2d/lunar_lander/#lunar-lander},
   note = {Accessed: 30.12.2023}
 }
+
+@misc{githubdoc,
+  author = {Amos Dinh and David Schaefer and Lasse Friedrich},
+  title = {Impossible-Game GitHub},
+  url = {https://github.com/LasseFrie/Impossible-Game},
+  note = {Accessed: 30.12.2023}
+}
